for-study/manifest/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: express-app
  labels:
    name: express-app
    purpose: learning
