for-study/manifest/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-svc
  namespace: express-app
  labels:
    app: express
spec:
  type: ClusterIP              # EKS では後段の Ingress が ALB を作成
  selector:
    app: express
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
